ignore cho đúng :<

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs
+/TeamProject2/.vs
+/TeamProject2/TeamProject2/bin/Debug/net6.0-windows
+/TeamProject2/TeamProject2/obj
