fixed ko trừ token khác #14

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /TeamProject2/.vs
 /TeamProject2/TeamProject2/bin/Debug/net6.0-windows
 /TeamProject2/TeamProject2/obj
+/TeamProject2/TeamProject2/Nobles.txt
+/TeamProject2/TeamProject2/Tier3Deck.txt
+/TeamProject2/TeamProject2/Tier2Deck.txt
+/TeamProject2/TeamProject2/Tier1Deck.txt
